--- a/PresentationLayer/MedicineForm.resx
+++ b/PresentationLayer/MedicineForm.resx
@@ -318,4 +318,10 @@
         7lPR/YLMiBH/AClizYgsk7omwAQEH/lA/9k=
 </value>
   </data>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
